--- a/patterns.html
+++ b/patterns.html
@@ -18,6 +18,9 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+
+    <script src="slideScript.js"></script>
+
     <link href="styles.css" rel="stylesheet" />
     <title>PATTERNS</title>
   </head>
@@ -36,9 +39,9 @@
     <main class="main-container">
       <div class="pattern-container">
         <div class="pattern-nav">
-          <a class="prev" onclick="prevPattern()">&lt;</a>
+          <a class="prev" id="prevBtn">&lt;</a>
           <span id="patternNavTitle">Title</span>
-          <a class="next" onclick="nextPattern()">&gt;</a>
+          <a class="next" id="nextBtn">&gt;</a>
         </div>
         <div class="patternSlide">
           <span class="slideTitle">Dr Who Scarf</span>
@@ -77,50 +80,5 @@
     <footer class="main-footer">
       <span>&copy; Alina Mihalache</span>
     </footer>
-
-    <script>
-      // JS code for implementing a slideshow
-      // code ref: https://www.w3schools.com/howto/howto_js_slideshow.asp
-
-      var slideIndex = 0;
-
-      // Set default pattern view
-      slideShow(slideIndex);
-
-      function nextPattern() {
-        // Navigate to next slide
-        slideIndex += 1;
-        slideShow(slideIndex);
-      }
-
-      function prevPattern() {
-        // Navigate to previous slide
-        slideIndex -= 1;
-        slideShow(slideIndex);
-      }
-
-      function slideShow(n) {
-        // Function for navigating image slides
-
-        var slides = document.getElementsByClassName("patternSlide");
-
-        // Check if input slide index is valid
-        if (n == slides.length) {
-          slideIndex = 0;
-        }
-        if (n < 0) {
-          slideIndex = slides.length - 1;
-        }
-        // Hide pattern other slides when navigating
-        for (var i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";
-        }
-        // Display the pattern slide and pattern the title at slideIndex
-        slides[slideIndex].style.display = "block";
-        var slideTitle =
-          document.getElementsByClassName("slideTitle")[slideIndex].innerHTML; // get title
-        document.getElementById("patternNavTitle").innerHTML = slideTitle;
-      }
-    </script>
   </body>
 </html>
